import { createOppilaitosForm } from './oppilaitosForm/createOppilaitosForm';
import { editOppilaitosForm } from './oppilaitosForm/editOppilaitosForm';

describe('createOppilaitos', createOppilaitosForm);
describe('editOppilaitos', editOppilaitosForm);
